Corrections and improvements.

--- a/src/i18n/ScarabBundle_fr_FR.properties
+++ b/src/i18n/ScarabBundle_fr_FR.properties
@@ -63,8 +63,8 @@ admin/UserAttributeEdit.vm.Title = Editeur d'attributs utilisateur
 admin/UserAttributeSelect.vm.Title = Choisir un attribut utilisateur
 admin/UpdateSearchIndex.vm.Title = Mise à jour de l'index de recherche
 admin/XMLImportIssuesResults.vm.Title = Résultats de l'import XML
-admin/XMLImportIssues.vm.Title = XML import issues
-admin/XMLExportIssues.vm.Title = Export XML des fiches
+admin/XMLImportIssues.vm.Title = Import XML de fiches
+admin/XMLExportIssues.vm.Title = Export XML de fiches
 admin/XMLExportSettings.vm.Title = Options de l'export XML
 
 entry/Wizard1.vm.Title = Entrer une fiche
@@ -177,7 +177,7 @@ AddNew = Ajouter nouveau
 AddNewChild = Nouveau fils
 AddAttachment = Ajouter pièce jointe
 AddCommentToSelected = Ajouter une note à la sélection
-AddFile = Add file
+AddFile = Ajouter un fichier
 Cancel = Annuler
 Refresh = Actualiser
 Done = Terminer
@@ -414,7 +414,7 @@ ProjectIsNotReady = Le projet n'est pas prêt. Veuillez patienter quelques minute
 ##SelectModule
 RequestRolesInOtherModules = <a href="{0}">Demande de rôles</a> dans des modules auxquels vous n''êtes pas associés pour l''instant.
 CurrentModule = Module courant
-YouCannotAccessModules = Désolé, vous n'avez accès à aucun autre module. Veuillez <a href="{0}">vous reconnecter</a> avec un compte qui a les droits requis pour choisir un module.
+YouCannotAccessModules = Désolé, vous n''avez accès à aucun autre module. Veuillez <a href="{0}">vous reconnecter</a> avec un compte qui a les droits requis pour choisir un module.
 
 ##RequestRoles
 RequestRoles = Demande de rôles
@@ -478,8 +478,8 @@ DestinationModuleLacksIssueType = Le module de destination n'a pas ce type de fi
 DidNotCopyAttributes = Les informations d'attribut suivantes n'ont pas été copiées:
 DidNotCopyAttributesFromArtifact = Les attributs et valeurs suivants n'ont pas été copiés de la fiche {0}:
 SelectIssueToMove = Veuillez choisir une fiche à déplacer.
-IssueCannotBeCopied = {0}(s) cannot be copied / moved since some of the 'required' attributes in the destination {1} / {2} have not been supplied with a value.
-AttributesThatReqdInDestinationIssueType = Attributes that require a value in the destination {0} / {1}
+IssueCannotBeCopied = {0}(s) ne peu(ven)t être copié(s) / déplacé(s) car certains attributs obligatoires dans la destination {1} / {2} n'ont pas de valeur définie.
+AttributesThatReqdInDestinationIssueType = Attributs qui nécessitent une valeur dans la destination {0} / {1}
 
 ##IssueList
 ExportResultsTo = Exporter les résultats vers...
@@ -600,7 +600,7 @@ EnteringListWillOverwrite = Le choix d'un nom de liste enregistré précédemment e
 EditingPreviouslySaved = La modification d'une liste enregistrée n'est pas implémentée.
 CurrentModuleTypesIntroShown = Le module courant est séparé pour un accès plus commode. Les types de fiches dans cette section peuvent être combinés avec ceux d'autres modules pour la section suivante.
 HideThisSection = <a href="{0}">Cacher cette section</a>
-CurrentModuleTypesIntroHidden = Issue types in the current module. <a href="{0}">Cliquez ici</a> pour créer une liste multi-modules.
+CurrentModuleTypesIntroHidden = Types de fiches dans le module courant. <a href="{0}">Cliquez ici</a> pour créer une liste multi-modules.
 
 ##Error
 StackTrace = Stack Trace
@@ -1076,9 +1076,9 @@ NoAttributeGroupSelected = Aucun groupe d'attributs n'a été sélectionné pour êtr
 NoIssueTypesSelected = Pas de type de fiche sélectionné.
 CannotDeleteIssueTypesWithIssues = Vous ne pouvez pas détruire un type de fiche auquel des fiches sont déjà associées.
 IssueTypeHasIssues = Ce type de fiche a des fiches associées.
-GlobalArtifactTypeCopied = Type global d'artéfact copié.
+GlobalArtifactTypeCopied = Type global de fiche copié.
 SystemSpecifiedIssueType = Ce type de fiche est défini par le système et ne peut pas être édité.
-CannotDeleteSystemSpecifiedIssueType = Issue type is system defined and hence cannot be deleted.
+CannotDeleteSystemSpecifiedIssueType = Ce type de fiche est défini par le système et ne peut pas être supprimé.
 ## GlobalAttributeEdit
 CannotCreateDuplicateAttribute = Il n'est pas possible de créer un Attribut en double avec le même nom!
 RecursiveParentChildRelationship = Désolé, une relation récursive Parent/Enfant n'est pas permise!
@@ -1117,7 +1117,7 @@ NoPermissionToEditReport = Vous n'avez pas le droit d'éditer cet état
 InvalidData = Données non valides
 SavedReportsMustHaveName = Les états enregistrés doivent avoir un nom.
 ReportSaved = L'état a été enregistré.
-ReportNameNotUnique = Un rapport portant ce nom existe déjà.  Veuillez choisir un nom unique.
+ReportNameNotUnique = Un état portant ce nom existe déjà.  Veuillez choisir un nom unique.
 ErrorPreventedSavingReport = Une erreur a empêché l'enregistrement de votre état.
 UseBrowserPrintReport = Utilisez votre navigateur pour imprimer l'état.
 
@@ -1199,7 +1199,7 @@ SearchAbortedDueToComplexity = La combinaison de critères de filtre saisie pour 
 ClickHere = Cliquez ici
 
 ## TemplateList
-TemplateListBriefInstructions = You may show templates for other issue types using the dropdown issue type list.  Click the link in the 'Name' column to edit the template and the link in the 'Availability' column to use the template.
+TemplateListBriefInstructions = Vous pouvez montrer les gabarits pour d'autres types de fiches en utilisant la liste déroulante de types. Cliquez sur le lien dans la colonne 'Nom' pour éditer le gabarit et le lien dans la colonne 'Disponibilité' pour utiliser le gabarit.
 NewTemplateCreated = Un nouveau gabarit a été créé.
 TemplateModified = Le gabarit a été modifié.
 TemplateDeleted = Le gabarit a été supprimé.
@@ -1425,7 +1425,7 @@ EntryForms = Formulaires de saisie
 ResultsandSelection = Pages de résultats et sélection
 CustomizingInterface = Personnaliser l'interface
 TheScarab = L'interface de Scarab 
-NavP1 = est organisée pour permettre d'accéder facilement aux fonctionnalités les plus importantes d'o? que l'on soit dans l'application. Chacun des écrans fournit des informations appropriées ainsi que des liens pour accéder à plus de détails lorsque c'est nécessaire. Une interface unifiée et cohérente vous permet de reconnaître aisément les types d'informations et d'actions disponibles sur chaque écran.
+NavP1 = est organisée pour permettre d'accéder facilement aux fonctionnalités les plus importantes d'où que l'on soit dans l'application. Chacun des écrans fournit des informations appropriées ainsi que des liens pour accéder à plus de détails lorsque c'est nécessaire. Une interface unifiée et cohérente vous permet de reconnaître aisément les types d'informations et d'actions disponibles sur chaque écran.
 NavP2 = Chaque écran fournit les aides à la navigation suivantes:
 NavP3Head = La barre de navigation gauche:
 NavP3 = La barre de navigation est organisée par type de fiche, puis par fonction. Pour accéder à une fonction dans un type de fiche déterminé, sélectionnez le libellé du type de fiche dans la barre de navigation gauche. Les fonctions disponibles pour ce type de fiche apparaîtront sous le libellé. 
@@ -1552,7 +1552,7 @@ IssueEntryP11Head = Saisir une fiche
 IssueEntryP11 = A cause de la nature hautement configurable de Scarab, la saisie de fiches peut être aussi personnelle que la personne qui saisit. Il y a pourtant certains principes de base qui s'appliquent à toutes les fiches entrées dans la base: pour chaque fiche saisie, vous définissez la fiche et ajoutez des informations complémentaires. Vous pouvez aussi vérifier la présence de doublons dans la base. 
 IssueEntryP12Head = Saisir des fiches
 IssueEntryP12 = Chaque type de fiche a un ensemble unique d'attributs spécifiques aux besoins de ce type. A la saisie d'une fiche vous voudrez généralement renseigner des valeurs pour autant d'attributs que possible. Rappelez-vous que pour créer des fiches efficaces, il faut être aussi précis et détaillé que possible. Les attributs vous permettent d'ajouter des informations utiles qui peuvent être utilisées facilement pour le suivi ou la recherche.
-IssueEntryP13 = Lorsque vous créez uen fiche, utilisez les champs texte pour ajouter autant d'information spécifique que possible. Votre administrateur a peut-être défini des attributs pour suivre une certaine information de manière générique, mais plus vous ajoutez de détails dans les zones texte, meilleure sera la fiche que vous créez.
+IssueEntryP13 = Lorsque vous créez une fiche, utilisez les champs texte pour ajouter autant d'information spécifique que possible. Votre administrateur a peut-être défini des attributs pour suivre une certaine information de manière générique, mais plus vous ajoutez de détails dans les zones texte, meilleure sera la fiche que vous créez.
 IssueEntryP14Head = Ajouter des informations utiles
 IssueEntryP14 = Dans le processus de saisie, vous pouvez ajouter des informations pertinentes; vous pouvez inclure des dépendances vers d'autres fiches ou attacher des fichiers appropriés (patches, méls, etc.).
 IssueEntryP15Head = Etablir des dépendances: 
