Updated role support

--- a/Eclipse UI/org/eclipse/ui/internal/messages.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/messages.properties
@@ -306,7 +306,7 @@ AboutFeaturesDialog.pluginInfoTitle = Feature Plug-ins
 AboutFeaturesDialog.pluginInfoMessage = Plug-ins contributed by feature: {0}
 AboutFeaturesDialog.unableToObtainFeatureInfo = Unable to obtain feature information.
 AboutFeaturesDialog.noInfoTitle = No Further Information
-
+RoleConfigurationAction.text = &Role Configuration
 
 # --- Shortcutbar ---
 SetPagePerspectiveAction.text = Change Perspective
