--- a/Eclipse UI/org/eclipse/ui/internal/roles/messages.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/roles/messages.properties
@@ -2,3 +2,5 @@ RoleManager.alreadySet=Role Manager is already set
 RecentActivityManager.CleanupJobName=Recent Activity Cleanup
 RecentActivityManager.CleanupTaskName=Pruning recent set
 RolePreferencePage.RoleBasedFilteringLabel=&Enable role-based filtering.
+SwapActivityHelper.disabled_activities=Disabled Roles
+SwapActivityHelper.enabled_activities=Enabled Roles
