[intern] Removed dupplicate CMenuItem class, added support for mnemonics using & in CMenuItem and started to implement the usage of & for mnemonics

--- a/res/org/columba/core/i18n/global/global.properties
+++ b/res/org/columba/core/i18n/global/global.properties
@@ -13,31 +13,22 @@ menu_utilities = Utilities
 menu_help = Help
 menu_preferences = Preferences
 
-menu_file_cancel = Stop
-menu_file_exit = Exit Program
-menu_file_close = Close
+menu_file_cancel = St&op
+menu_file_exit = E&xit Program
+menu_file_close = &Close
 menu_file_close_mnemonic=c
 menu_file_new = New
 
-menu_file_new_addressbook = Addressbook Window
-menu_file_new_mail = Mail Window
-menu_file_new_message = Message Window
+menu_file_new_addressbook = &Addressbook Window
+menu_file_new_mail = Mail &Window
+menu_file_new_message = &Message Window
 
-menu_edit_cut = Cut
-menu_edit_copy = Copy
-menu_edit_paste = Paste
-menu_edit_delete = Delete
-menu_edit_find = Find
-menu_edit_find_tooltip = Find text
-
-menu_edit_findagain = Find Again
-menu_edit_selectall = Select All
 menu_edit_selectnone = Select None
 
-menu_edit_pluginmanager=Plugin Manager..
+menu_edit_pluginmanager=&Plugin Manager..
 
 menu_view_showfiltertoolbar = Filter Toolbar
-menu_view_showtoolbar = Toolbar
+menu_view_showtoolbar = &Toolbar
 menu_view_showfolderinfo = FolderInfo Toolbar
 menu_view_show_hide = Show/Hide
 
@@ -53,23 +44,17 @@ menu_file_save = Save
 menu_file_save_mnemonic=s
 menu_file_saveas = Save As...
 menu_file_saveas_mnemonic=a
-menu_edit_undo = Undo
-menu_edit_undo_mnemonic=u
-menu_edit_redo = Redo
-menu_edit_redo_mnemonic=r
-menu_edit_cut = Cut
-menu_edit_cut_mnemonic=t
-menu_edit_copy = Copy
-menu_edit_copy_mnemonic=c
-menu_edit_find = Find
-menu_edit_findagain = Find Again
+menu_edit_undo = &Undo
+menu_edit_redo = &Redo
+menu_edit_cut = Cu&t
+menu_edit_copy = &Copy
+menu_edit_find = &Find
+menu_edit_find_tooltip = Find text
+menu_edit_findagain = F&ind Again
 menu_edit_findagain_tooltip = Search for previously found text again
-menu_edit_paste = Paste
-menu_edit_paste_mnemonic=p
-menu_edit_delete = Delete
-menu_edit_delete_mnemonic=d
-menu_edit_selectall = Select All
-menu_edit_selectall_mnemonic=s
+menu_edit_paste = &Paste
+menu_edit_delete = &Delete
+menu_edit_selectall = Select &All
 menu_edit_replace = Replace ...
 
 # 09/16/02 ALP
@@ -77,13 +62,9 @@ menu_edit_replace = Replace ...
 menu_edit_extern_edit = Use External Editor
 extern_editor_using_msg = USING EXTERNAL EDITOR
 
-menu_edit_find_mnemonic=f
-
 menu_edit_replace_mnemonic=l
 
 menu_edit_selectnone_mnemonic=n
-
-menu_file_exit_mnemonic=e
 
 menu_help_about_mnemonic=a
 
@@ -101,12 +82,12 @@ menu_help_sourceforge_mnemonic=s
 
 cancel=Cancel
 
-close=Close
+close=&Close
 
 help=Help
 
 ok=OK
 
-menu_edit_findagain_mnemonic=a
-
 menu_edit_extern_edit_mnemonic=e
+
+menu_utilities_externaltools = External &Tools...
