--- a/res/org/columba/mail/i18n/menu/composer.properties
+++ b/res/org/columba/mail/i18n/menu/composer.properties
@@ -23,7 +23,7 @@ menu_file_savedraft = Save As Draft
 menu_file_savedraft_mnemonic=d
 menu_file_savetemplate = Save As Template
 menu_file_savetemplate_mnemonic=t
-menu_file_send = Send Now
+menu_file_send = Send &Now
 menu_file_send_mnemonic=n
 menu_file_send_tooltip = Send this message now
 menu_file_sendlater = Send Later
@@ -35,7 +35,7 @@ composer_no_subject=1
 priority_mnemonic=1
 
 menu_format_paragraph = Paragraph
-menu_format_enable_html = HTML Message
+menu_format_enable_html = &HTML Message
 menu_format_font_size = Font Size
 menu_format_bold = Bold
 menu_format_bold_tooltip = Format Selected Text Bold
