--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -26,43 +26,43 @@ menu_folder_applyfilter = Apply Filters
 menu_folder_filterconfig = Message Filters...
 menu_folder_subscribe = Subscribe...
 
-
-
 menu_file_opennewwindow = Open New Window
 menu_file_checkmessage = Get New Messages for
-menu_file_receivesend = Receive and Send
+menu_file_receivesend = &Receive and Send
 menu_file_receivesend_toolbar = Receive/Send
 menu_file_receivesend_tooltip = Get new messages and send all queued messages
-menu_file_receive = Get New Messages
-menu_file_sendunsentmessages = Send Unsent Messages
+menu_file_receive = &Get New Messages
+menu_file_sendunsentmessages = &Send Unsent Messages
 menu_file_sendunsentmessages_tooltip = Send all unsent Messages now
 menu_file_fetchall = Check All Accounts
 menu_file_manage = Manage Messages remotely
-menu_file_printsetup = Printer Setup...
-menu_file_save = Save As...
+menu_file_printsetup = Printer Se&tup...
+menu_file_save = Save &As...
 menu_file_save_tooltip = Save selected message source as...
 
-menu_edit_accountconfig = Mail Account Settings...
+menu_edit_accountconfig = &Mail Account Settings...
+menu_edit_mailoptions = Mail &Options...
 menu_edit_preferences = Theme and Font Preferences
-menu_edit_generaloptions = General Options...
+menu_edit_generaloptions = &General Options...
 menu_edit_generaloptions_tooltip = Overall setup for Columba...
 menu_aspell_preferences = Configure ASpell
 
 menu_edit_searchmessages = Search Messages...
+menu_view_folderinfopanel = &Folder Info Panel
 menu_view_sort = Sort Messages by
 menu_view_next = Next Message
-menu_view_nextmessage = Message
+menu_view_nextmessage = &Message
 menu_view_nextmessage_tooltip = Show next message
-menu_view_nextunreadmessage = Unread message
+menu_view_nextunreadmessage = &Unread message
 menu_view_nextunreadmessage_tooltip = Show next unread message
 menu_view_nextflaggedmessage = Flagged message
 menu_view_nextflaggedmessage_tooltip = Show next flagged message
 menu_view_nextunreadthread = Unread thread
 menu_view_nextunreadthread_tooltip = Show next unread thread
 menu_view_prev = Previous Message
-menu_view_prevmessage = Message
+menu_view_prevmessage = &Message
 menu_view_prevmessage_tooltip = Show previous message
-menu_view_prevunreadmessage = Unread message
+menu_view_prevunreadmessage = &Unread message
 menu_view_prevunreadmessage_tooltip = Show previous unread message
 menu_view_prevflaggedmessage = Flagged message
 menu_view_prevunreadthread = Unread thread
@@ -131,16 +131,16 @@ menu_view_charset_windows-1258 = Vietnamese (Windows-1258)
 
 
 
-menu_view_source = View Message Source
+menu_view_source = &View Message Source
 menu_view_source_tooltip = Show current message in source form
-menu_view_viewthreaded = Threaded View
+menu_view_viewthreaded = &Threaded View
 menu_view_viewthreaded_tooltip = Show threaded view of messages
 
 menu_folder = Folder
 menu_message_new = New Message
 menu_message_new_toolbar = New Message
 menu_message_new_tooltip = Create a new message
-menu_message_print = Print
+menu_message_print = &Print
 menu_message_print_tooltip = Print selected message
 menu_message_save = Save Message Body As...
 menu_message_save_tooltip = Save selected message body as...
