[intern] Continuing change of the way mnemonics are defined - now & is used in action names, labels etc.

--- a/res/org/columba/core/i18n/dialog/exception.properties
+++ b/res/org/columba/core/i18n/dialog/exception.properties
@@ -7,6 +7,4 @@ stack_trace=Stack Trace:
 
 hint=An Exception occured. It is possible that you found a bug!
 
-report_bug=Report Bug
-
-report_bug_mnemonic=r
+report_bug=&Report Bug
