--- a/res/org/columba/core/i18n/global/global.properties
+++ b/res/org/columba/core/i18n/global/global.properties
@@ -16,7 +16,6 @@ menu_preferences = Preferences
 menu_file_cancel = St&op
 menu_file_exit = E&xit Program
 menu_file_close = &Close
-menu_file_close_mnemonic=c
 menu_file_new = New
 
 menu_file_new_addressbook = &Addressbook Window
@@ -32,13 +31,14 @@ menu_view_showtoolbar = &Toolbar
 menu_view_showfolderinfo = FolderInfo Toolbar
 menu_view_show_hide = Show/Hide
 
-menu_help_about = About
-menu_help_homepage = Homepage
-menu_help_help = Online Documentation
-menu_help_faq = Online FAQ
-menu_help_bug = Submit Bug Report
-menu_help_license = License
-menu_help_sourceforge = Sourceforge Project Site
+menu_help_about = &About
+menu_help_homepage = Home&page
+menu_help_help = Online &Documentation
+menu_help_context = &Context Specific Help
+menu_help_faq = Online &FAQ
+menu_help_bug = Submit &Bug Report
+menu_help_license = &License
+menu_help_sourceforge = &Sourceforge Project Site
 
 menu_file_save = Save
 menu_file_save_mnemonic=s
@@ -59,26 +59,12 @@ menu_edit_replace = Replace ...
 
 # 09/16/02 ALP
 # Added as part of external editor support
-menu_edit_extern_edit = Use External Editor
+menu_edit_extern_edit = Use E&xternal Editor
 extern_editor_using_msg = USING EXTERNAL EDITOR
 
 menu_edit_replace_mnemonic=l
 
 menu_edit_selectnone_mnemonic=n
-
-menu_help_about_mnemonic=a
-
-menu_help_faq_mnemonic=f
-
-menu_help_license_mnemonic=l
-
-menu_help_homepage_mnemonic=h
-
-menu_help_help_mnemonic=d
-
-menu_help_bug_mnemonic=r
-
-menu_help_sourceforge_mnemonic=s
 
 cancel=Cancel
 
