--- a/res/org/columba/mail/i18n/dialog/accountwizard.properties
+++ b/res/org/columba/mail/i18n/dialog/accountwizard.properties
@@ -13,35 +13,24 @@ identity_text=If you send a message, your name and address are visible in the Fr
 
 # incoming server panel
 incomingserver_text=Please specify your incoming mail server properties. If you are unsure please\nask your system administrator or internet service provider for help.
-host=Host:
-host_mnemonic=h
+host=&Host:
 outgoingserver_text=Please specify your outgoing mail server properties. If you are unsure please\nask your system administrator or internet service provider for help.
 welcome_text=Welcome to Columba\!\n\nIt is the first time you are starting Columba. This Wizard will guide you in creating a new account.
 
 identity=Identity Information
 
-name=Name:
+name=&Name:
 
-name_mnemonic=n
-
-address=Address:
-
-address_mnemonic=a
+address=&Address:
 
 incomingserver_description=Please enter your Incoming Mail Server
 
-login=Login:
+login=&Login:
 
-login_mnemonic=l
-
-type=Type:
-
-type_mnemonic=t
+type=&Type:
 
 outgoingserver_description=Please enter your Outgoing Mail Server
 
 finish_description=All necessary information has been entered
 
-accountname=Account Name:
-
-accountname_mnemonic=o
+accountname=Acc&ount Name:
