--- a/res/org/columba/mail/i18n/dialog/mailboximport.properties
+++ b/res/org/columba/mail/i18n/dialog/mailboximport.properties
@@ -18,9 +18,9 @@ files=Files
 
 location_text=Please choose the source files and destination folder.
 
-source=Source Files:
+source=&Source Files:
 
-destination=Destination Folder:
+destination=&Destination Folder:
 
 explanation=(Folder inside Columba)
 
@@ -29,7 +29,3 @@ plugin=Select Importer
 plugin_description=Please select the importer for your mailbox
 
 plugin_text=Please choose the mailbox format you want to import to Columba.
-
-destination_mnemonic=d
-
-source_mnemonic=s
