--- a/res/org/columba/mail/i18n/menu/composer.properties
+++ b/res/org/columba/mail/i18n/menu/composer.properties
@@ -5,32 +5,22 @@ menu_account_info_panel = Account Info Panel
 menu_addressbook_panel = Addressbook Panel
 menu_security = Security
 
-menu_message_attachFile = Attach File
+menu_message_attachFile = &Attach File
 menu_message_attachFile_tooltip = Attach file to this message
-menu_message_attachFile_mnemonic=a
-menu_message_spellCheck = Spell Check
-menu_message_spellCheck_mnemonic=s
+menu_message_spellCheck = &Spell Check
 menu_message_attachMessage = Attach Message
 menu_message_attachMessage_mnemonic=m
-menu_message_addressbook = Addressbook
-menu_message_addressbook_mnemonic=b
+menu_message_addressbook = Address&book
 
-menu_message_sign = PGP Sign Message
-menu_message_sign_mnemonic=s
-menu_message_encrypt = PGP Encrypt Message
+menu_message_sign = &PGP Sign Message
+menu_message_encrypt = PGP &Encrypt Message
 
-menu_file_savedraft = Save As Draft
-menu_file_savedraft_mnemonic=d
-menu_file_savetemplate = Save As Template
-menu_file_savetemplate_mnemonic=t
+menu_file_savedraft = Save As &Draft
+menu_file_savetemplate = Save As &Template
 menu_file_send = Send &Now
-menu_file_send_mnemonic=n
 menu_file_send_tooltip = Send this message now
-menu_file_sendlater = Send Later
-menu_file_sendlater_mnemonic=l
+menu_file_sendlater = Send &Later
 
-menu_message_encrypt_mnemonic=1
-menu_edit_extern_edit_mnemonic=1
 composer_no_subject=1
 priority_mnemonic=1
 
