--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -13,18 +13,19 @@ menu_format = Format
 menu_format_style = Style
 menu_format_justification = Justify
 
-menu_folder_newfolder = New Subfolder...
-menu_folder_newvirtualfolder = New Virtual Subfolder...
-menu_folder_renamefolder = Rename Folder
-menu_folder_removefolder = Remove Folder
+menu_folder_newfolder = &New Subfolder...
+menu_folder_newvirtualfolder = New &Virtual Subfolder...
+menu_folder_renamefolder = &Rename Folder
+menu_folder_removefolder = Remove Fol&der
 menu_folder_movedown=Move down
 menu_folder_moveup=Move up
-menu_folder_expungefolder = Expunge Folder
-menu_folder_emptyfolder = Empty Folder
+menu_folder_expungefolder = Ex&punge Folder
+menu_folder_emptyfolder = &Empty Folder
 menu_folder_compactfolder = Compact Folder
-menu_folder_applyfilter = Apply Filters
-menu_folder_filterconfig = Message Filters...
-menu_folder_subscribe = Subscribe...
+menu_folder_applyfilter = Apply &Filters
+menu_folder_filterconfig = &Message Filters...
+menu_folder_subscribe = &Subscribe...
+menu_folder_folderoptions = Folder &Options...
 
 menu_file_opennewwindow = Open New Window
 menu_file_checkmessage = Get New Messages for
@@ -47,7 +48,7 @@ menu_edit_generaloptions = &General Options...
 menu_edit_generaloptions_tooltip = Overall setup for Columba...
 menu_aspell_preferences = Configure ASpell
 
-menu_edit_searchmessages = Search Messages...
+menu_edit_searchmessages = &Search Messages...
 menu_view_folderinfopanel = &Folder Info Panel
 menu_view_sort = Sort Messages by
 menu_view_next = Next Message
@@ -137,14 +138,14 @@ menu_view_viewthreaded = &Threaded View
 menu_view_viewthreaded_tooltip = Show threaded view of messages
 
 menu_folder = Folder
-menu_message_new = New Message
+menu_message_new = &New Message
 menu_message_new_toolbar = New Message
 menu_message_new_tooltip = Create a new message
 menu_message_print = &Print
 menu_message_print_tooltip = Print selected message
-menu_message_save = Save Message Body As...
+menu_message_save = &Save Message Body As...
 menu_message_save_tooltip = Save selected message body as...
-menu_message_reply = Reply
+menu_message_reply = &Reply
 menu_message_reply_tooltip = Reply to selected Message
 menu_message_bounce = Bounce
 menu_message_bounce_tooltip = Bounce Message
@@ -155,30 +156,30 @@ menu_message_replytoall = Reply to All
 menu_message_replytoall_tooltip = Reply to sender and all recipients
 menu_message_replyasattachment = Reply as Attachment
 menu_message_replyasattachment_tooltip = Reply as Attachment
-menu_message_forward = Forward
+menu_message_forward = &Forward
 menu_message_forward_tooltip = Forward selected message to somebody
 menu_message_forward_as_attachment = Forward As Attachment
 menu_message_forward_as_attachment_tooltip = Forward selected message as attachment to somebody
-menu_message_forwardinline = Forward Inline
+menu_message_forwardinline = Forward &Inline
 menu_message_forwardinline_tooltip = Forward selected message as inline
-menu_message_move = Move to Folder...
+menu_message_move = &Move to Folder...
 menu_message_move_toolbar = Move
 menu_message_move_tooltip = Move selected messages to folder...
-menu_message_copy = Copy to Folder...
+menu_message_copy = &Copy to Folder...
 menu_message_copy_toolbar = Copy
 menu_message_copy_tooltip = Copy selected messages to folder...
-menu_message_delete = Delete message
+menu_message_delete = &Delete message
 menu_message_delete_toolbar = Delete
 menu_message_delete_tooltip = Delete selected messages
 menu_message_mark = Mark Message
-menu_message_markasread = As Read
+menu_message_markasread = As &Read
 menu_message_markasread_tooltip = Mark message as read
 menu_message_markthreadasread = Thread As Read
 menu_message_markallasread = All Read
 menu_message_markallasread_tooltip = Mark all messages as read
-menu_message_markasflagged = As Flagged
+menu_message_markasflagged = As &Flagged
 menu_message_markasflagged_tooltip = Mark message as flagged
-menu_message_markasexpunged = As Expunged
+menu_message_markasexpunged = As &Expunged
 menu_message_markasexpunged_tooltip = Mark message as expunged
 menu_message_addsender = Add Sender To Addressbook
 menu_message_addallsenders = Add All Senders To Addressbook
@@ -240,7 +241,8 @@ attachmentview_mimeheader_tooltip=View the Mime-Header of this Attachment
 
 menu_security=Security
 
-menu_utilities_importmailbox=Import Mailbox...
+menu_utilities_importmailbox=&Import Mailbox...
+menu_utilities_exportmail=&Export Mail...
 
 filtertoolbar_advanced_tooltip=Opens the Search dialog
 
