--- a/res/org/columba/mail/i18n/dialog/mimetypeviewer.properties
+++ b/res/org/columba/mail/i18n/dialog/mimetypeviewer.properties
@@ -1,12 +1,8 @@
 # Sample ResourceBundle properties file
 dialog_title=Select viewer for
 
-viewer_label=Viewer:
+viewer_label=&Viewer:
 
-save_viewer=Always open with this viewer
+save_viewer=&Always open with this viewer
 
 choose_viewer=Choose program
-
-viewer_label_mnemonic=v
-
-save_viewer_mnemonic=a
